[CSS] exercise2 add card list

--- a/css/exercises/2_inflrean_flex/index.html
+++ b/css/exercises/2_inflrean_flex/index.html
@@ -120,5 +120,67 @@
         </p>
       </li>
     </ul>
+
+    <ul class="card__list">
+      <li class="card__item">
+        <figure
+          class="card__item__img"
+          style="background-image: url('./images/card.jpeg')"
+        ></figure>
+        <p class="card__item__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit odio
+          velit dicta iure corrupti quis quaerat aperiam voluptatibus corporis
+          et delectus ducimus, consequatur quisquam rem sed a consectetur
+          adipisci deleniti magni explicabo! Excepturi odio debitis earum illo
+          eligendi recusandae distinctio, aliquid, repudiandae quod tempora
+          repellendus dolor, reiciendis ex quo sed.
+        </p>
+      </li>
+      <li class="card__item">
+        <figure
+          class="card__item__img"
+          style="background-image: url('./images/card.jpeg')"
+        ></figure>
+        <p class="card__item__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+          voluptate distinctio vel aliquid perferendis vero consequatur
+          laboriosam eligendi quibusdam corrupti.
+        </p>
+      </li>
+      <li class="card__item">
+        <figure
+          class="card__item__img"
+          style="background-image: url('./images/card.jpeg')"
+        ></figure>
+        <p class="card__item__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore,
+          mollitia?
+        </p>
+      </li>
+      <li class="card__item">
+        <figure
+          class="card__item__img"
+          style="background-image: url('./images/card.jpeg')"
+        ></figure>
+        <p class="card__item__text">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+          tempora maiores adipisci. Temporibus, ab laborum.
+        </p>
+      </li>
+      <li class="card__item">
+        <figure
+          class="card__item__img"
+          style="background-image: url('./images/card.jpeg')"
+        ></figure>
+        <p class="card__item__text">Lorem ipsum dolor sit amet.</p>
+      </li>
+      <li class="card__item">
+        <figure
+          class="card__item__img"
+          style="background-image: url('./images/card.jpeg')"
+        ></figure>
+        <p class="card__item__text">Lorem ipsum dolor sit amet consectetur.</p>
+      </li>
+    </ul>
   </body>
 </html>
