[CSS] exercise2 more layout

--- a/css/exercises/2_inflrean_flex/index.html
+++ b/css/exercises/2_inflrean_flex/index.html
@@ -9,199 +9,201 @@
     <link rel="stylesheet" href="./layout.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="header__logo">LOGO</div>
-      <form class="search__form">
-        <input type="search" class="search__text" />
-        <input type="submit" value="검색" class="search__submit" />
-      </form>
-    </header>
+    <div class="page">
+      <header class="header">
+        <div class="header__logo">LOGO</div>
+        <form class="search__form">
+          <input type="search" class="search__text" />
+          <input type="submit" value="검색" class="search__submit" />
+        </form>
+      </header>
 
-    <nav class="menu">
-      <div class="menu__item">
-        <a href="" class="menu__link">Home</a>
-      </div>
-      <div class="menu__item">
-        <a href="" class="menu__link">About</a>
-      </div>
-      <div class="menu__item">
-        <a href="" class="menu__link">Product</a>
-      </div>
-      <div class="menu__item">
-        <a href="" class="menu__link">Contact</a>
-      </div>
-    </nav>
+      <nav class="menu">
+        <div class="menu__item">
+          <a href="" class="menu__link">Home</a>
+        </div>
+        <div class="menu__item">
+          <a href="" class="menu__link">About</a>
+        </div>
+        <div class="menu__item">
+          <a href="" class="menu__link">Product</a>
+        </div>
+        <div class="menu__item">
+          <a href="" class="menu__link">Contact</a>
+        </div>
+      </nav>
 
-    <section class="primary">
-      <ul class="card__list">
-        <li class="card__item">
-          <figure
-            class="card__item__img"
-            style="background-image: url('./images/card.jpeg')"
-          ></figure>
-          <p class="card__item__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit odio
-            velit dicta iure corrupti quis quaerat aperiam voluptatibus corporis
-            et delectus ducimus, consequatur quisquam rem sed a consectetur
-            adipisci deleniti magni explicabo! Excepturi odio debitis earum illo
-            eligendi recusandae distinctio, aliquid, repudiandae quod tempora
-            repellendus dolor, reiciendis ex quo sed.
-          </p>
-        </li>
-        <li class="card__item">
-          <figure
-            class="card__item__img"
-            style="background-image: url('./images/card.jpeg')"
-          ></figure>
-          <p class="card__item__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
-            voluptate distinctio vel aliquid perferendis vero consequatur
-            laboriosam eligendi quibusdam corrupti.
-          </p>
-        </li>
-        <li class="card__item">
-          <figure
-            class="card__item__img"
-            style="background-image: url('./images/card.jpeg')"
-          ></figure>
-          <p class="card__item__text">
+      <section class="primary">
+        <ul class="card__list">
+          <li class="card__item">
+            <figure
+              class="card__item__img"
+              style="background-image: url('./images/card.jpeg')"
+            ></figure>
+            <p class="card__item__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+              odio velit dicta iure corrupti quis quaerat aperiam voluptatibus
+              corporis et delectus ducimus, consequatur quisquam rem sed a
+              consectetur adipisci deleniti magni explicabo! Excepturi odio
+              debitis earum illo eligendi recusandae distinctio, aliquid,
+              repudiandae quod tempora repellendus dolor, reiciendis ex quo sed.
+            </p>
+          </li>
+          <li class="card__item">
+            <figure
+              class="card__item__img"
+              style="background-image: url('./images/card.jpeg')"
+            ></figure>
+            <p class="card__item__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+              voluptate distinctio vel aliquid perferendis vero consequatur
+              laboriosam eligendi quibusdam corrupti.
+            </p>
+          </li>
+          <li class="card__item">
+            <figure
+              class="card__item__img"
+              style="background-image: url('./images/card.jpeg')"
+            ></figure>
+            <p class="card__item__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore,
+              mollitia?
+            </p>
+          </li>
+          <li class="card__item">
+            <figure
+              class="card__item__img"
+              style="background-image: url('./images/card.jpeg')"
+            ></figure>
+            <p class="card__item__text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum tempora maiores adipisci. Temporibus, ab laborum.
+            </p>
+          </li>
+          <li class="card__item">
+            <figure
+              class="card__item__img"
+              style="background-image: url('./images/card.jpeg')"
+            ></figure>
+            <p class="card__item__text">Lorem ipsum dolor sit amet.</p>
+          </li>
+          <li class="card__item">
+            <figure
+              class="card__item__img"
+              style="background-image: url('./images/card.jpeg')"
+            ></figure>
+            <p class="card__item__text">
+              Lorem ipsum dolor sit amet consectetur.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <aside class="aside aside__a">
+        <ul class="info__list">
+          <li class="info__list__item">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore
+            architecto autem odio pariatur libero ratione tempore debitis in
+            laboriosam itaque deleniti velit aut commodi laborum harum, sunt
+            quas cumque temporibus? Iure cum odio fugiat odit nam. Consectetur
+            maiores eaque mollitia error explicabo eveniet vero sequi deserunt,
+            velit non dolorum accusantium!
+          </li>
+          <li class="info__list__item">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore,
-            mollitia?
-          </p>
-        </li>
-        <li class="card__item">
-          <figure
-            class="card__item__img"
-            style="background-image: url('./images/card.jpeg')"
-          ></figure>
-          <p class="card__item__text">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-            tempora maiores adipisci. Temporibus, ab laborum.
-          </p>
-        </li>
-        <li class="card__item">
-          <figure
-            class="card__item__img"
-            style="background-image: url('./images/card.jpeg')"
-          ></figure>
-          <p class="card__item__text">Lorem ipsum dolor sit amet.</p>
-        </li>
-        <li class="card__item">
-          <figure
-            class="card__item__img"
-            style="background-image: url('./images/card.jpeg')"
-          ></figure>
-          <p class="card__item__text">
-            Lorem ipsum dolor sit amet consectetur.
-          </p>
-        </li>
-      </ul>
-    </section>
+            obcaecati. Eos odio iusto asperiores fugiat quidem assumenda ullam
+            incidunt labore.
+          </li>
+          <li class="info__list__item">Lorem ipsum dolor sit amet.</li>
+        </ul>
 
-    <aside class="aside aside__a">
-      <ul class="info__list">
-        <li class="info__list__item">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore
-          architecto autem odio pariatur libero ratione tempore debitis in
-          laboriosam itaque deleniti velit aut commodi laborum harum, sunt quas
-          cumque temporibus? Iure cum odio fugiat odit nam. Consectetur maiores
-          eaque mollitia error explicabo eveniet vero sequi deserunt, velit non
-          dolorum accusantium!
-        </li>
-        <li class="info__list__item">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore,
-          obcaecati. Eos odio iusto asperiores fugiat quidem assumenda ullam
-          incidunt labore.
-        </li>
-        <li class="info__list__item">Lorem ipsum dolor sit amet.</li>
-      </ul>
+        <ul class="user__list">
+          <li class="user__list__item">
+            <figure
+              class="user__photo"
+              style="background-image: url('./images/profile.jpg')"
+            ></figure>
+            <p class="user__name">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum, consequatur labore? Rerum sequi inventore quas iste
+              odit minima atque corporis, excepturi illo expedita debitis alias
+              nobis quasi dolorum temporibus repellendus.
+            </p>
+          </li>
+          <li class="user__list__item">
+            <figure
+              class="user__photo"
+              style="background-image: url('./images/profile.jpg')"
+            ></figure>
+            <p class="user__name">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
+              cum magni excepturi quo rem officiis praesentium laudantium
+              explicabo nam vel sint quam eaque, fuga consequatur exercitationem
+              odit soluta sunt totam?
+            </p>
+          </li>
+          <li class="user__list__item">
+            <figure
+              class="user__photo"
+              style="background-image: url('./images/profile.jpg')"
+            ></figure>
+            <p class="user__name">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus
+              suscipit aliquam blanditiis? Similique alias id eos ratione quis
+              labore asperiores!
+            </p>
+          </li>
+        </ul>
+      </aside>
 
-      <ul class="user__list">
-        <li class="user__list__item">
-          <figure
-            class="user__photo"
-            style="background-image: url('./images/profile.jpg')"
-          ></figure>
-          <p class="user__name">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
-            consequatur labore? Rerum sequi inventore quas iste odit minima
-            atque corporis, excepturi illo expedita debitis alias nobis quasi
-            dolorum temporibus repellendus.
-          </p>
-        </li>
-        <li class="user__list__item">
-          <figure
-            class="user__photo"
-            style="background-image: url('./images/profile.jpg')"
-          ></figure>
-          <p class="user__name">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
-            cum magni excepturi quo rem officiis praesentium laudantium
-            explicabo nam vel sint quam eaque, fuga consequatur exercitationem
-            odit soluta sunt totam?
-          </p>
-        </li>
-        <li class="user__list__item">
-          <figure
-            class="user__photo"
-            style="background-image: url('./images/profile.jpg')"
-          ></figure>
-          <p class="user__name">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus
-            suscipit aliquam blanditiis? Similique alias id eos ratione quis
-            labore asperiores!
-          </p>
-        </li>
-      </ul>
-    </aside>
+      <aside class="aside aside__b">
+        <ul class="message__list">
+          <li class="message__list__item">
+            <figure
+              class="user__photo"
+              style="background-image: url('./images/profile.jpg')"
+            ></figure>
+            <p class="message__content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum, consequatur labore? Rerum sequi inventore quas iste
+              odit minima atque corporis, excepturi illo expedita debitis alias
+              nobis quasi dolorum temporibus repellendus.
+            </p>
+          </li>
+          <li class="message__list__item">
+            <figure
+              class="user__photo"
+              style="background-image: url('./images/profile.jpg')"
+            ></figure>
+            <p class="message__content">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
+              cum magni excepturi quo rem officiis praesentium laudantium
+              explicabo nam vel sint quam eaque, fuga consequatur exercitationem
+              odit soluta sunt totam?
+            </p>
+          </li>
+          <li class="message__list__item">
+            <figure
+              class="user__photo"
+              style="background-image: url('./images/profile.jpg')"
+            ></figure>
+            <p class="message__content">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus
+              suscipit aliquam blanditiis? Similique alias id eos ratione quis
+              labore asperiores!
+            </p>
+          </li>
+        </ul>
+      </aside>
 
-    <aside class="aside aside__b">
-      <ul class="message__list">
-        <li class="message__list__item">
-          <figure
-            class="user__photo"
-            style="background-image: url('./images/profile.jpg')"
-          ></figure>
-          <p class="message__content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
-            consequatur labore? Rerum sequi inventore quas iste odit minima
-            atque corporis, excepturi illo expedita debitis alias nobis quasi
-            dolorum temporibus repellendus.
-          </p>
-        </li>
-        <li class="message__list__item">
-          <figure
-            class="user__photo"
-            style="background-image: url('./images/profile.jpg')"
-          ></figure>
-          <p class="message__content">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
-            cum magni excepturi quo rem officiis praesentium laudantium
-            explicabo nam vel sint quam eaque, fuga consequatur exercitationem
-            odit soluta sunt totam?
-          </p>
-        </li>
-        <li class="message__list__item">
-          <figure
-            class="user__photo"
-            style="background-image: url('./images/profile.jpg')"
-          ></figure>
-          <p class="message__content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus
-            suscipit aliquam blanditiis? Similique alias id eos ratione quis
-            labore asperiores!
-          </p>
-        </li>
-      </ul>
-    </aside>
-
-    <footer class="footer">
-      인프런 1분 코딩 강의<br />
-      <a
-        href="https://www.inflearn.com/course/css-flex-grid-%EC%A0%9C%EB%8C%80%EB%A1%9C-%EC%9D%B5%ED%9E%88%EA%B8%B0"
-        >강의 링크</a
-      >
-    </footer>
+      <footer class="footer">
+        인프런 1분 코딩 강의<br />
+        <a
+          href="https://www.inflearn.com/course/css-flex-grid-%EC%A0%9C%EB%8C%80%EB%A1%9C-%EC%9D%B5%ED%9E%88%EA%B8%B0"
+          >강의 링크</a
+        >
+      </footer>
+    </div>
 
     <input id="modal__opener" type="checkbox" />
     <label for="modal__opener"></label>
