[CSS] exercise3 fix colors

--- a/css/exercises/3_youtube/index.html
+++ b/css/exercises/3_youtube/index.html
@@ -14,7 +14,7 @@
   <body>
     <aside class="aside">
       <ul class="aside__list">
-        <li class="aside__item">
+        <li class="aside__item aside__item--active">
           <i class="aside__item__icon fas fa-home"></i>
           <span class="aside__item__title">홈</span>
         </li>
