[CSS] exercise3 add favicon

--- a/css/exercises/3_youtube/index.html
+++ b/css/exercises/3_youtube/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/c790e67c81.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="stylesheet" href="../base.css" class="" />
     <link rel="stylesheet" href="./style.css" class="" />
   </head>
