[CSS] exercise3 add new dot

--- a/css/exercises/3_youtube/index.html
+++ b/css/exercises/3_youtube/index.html
@@ -67,14 +67,17 @@
         <li class="aside__item">
           <img class="aside__item__img" src="images/sub1.jpg" />
           <span class="aside__item__title">수탉</span>
+          <div class="aside__item__new"></div>
         </li>
         <li class="aside__item">
           <img class="aside__item__img" src="images/sub2.jpg" />
           <span class="aside__item__title">방앗간 비둘기</span>
+          <div class="aside__item__new"></div>
         </li>
         <li class="aside__item">
           <img class="aside__item__img" src="images/sub3.jpg" />
           <span class="aside__item__title">김성회의 G식백과</span>
+          <div class="aside__item__new"></div>
         </li>
         <li class="aside__item">
           <img class="aside__item__img" src="images/sub4.jpg" />
