exercise5 add inputs

--- a/css/exercises/5_profile_generator/index.html
+++ b/css/exercises/5_profile_generator/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <div class="container"></div>
+    
+    <label for="cols">cols</label>
+    <input type="number" class="input" name="cols" value="20">
+
+    <label for="rows">rows</label>
+    <input type="number" class="input" name="rows" value="20">
+    
+    <button onclick="draw()">Create</button>
     <script src="./script.js"></script>
   </body>
 </html>
