[Exercise] add youtube header

--- a/exercises/3_youtube/index.html
+++ b/exercises/3_youtube/index.html
@@ -13,6 +13,32 @@
     <link rel="stylesheet" href="./style.css" class="" />
   </head>
   <body>
+    <header class="header">
+      <div class="header__item">
+        <div class="header__item__hamburger">
+          <div class="hamburger__line"></div>
+          <div class="hamburger__line"></div>
+          <div class="hamburger__line"></div>
+        </div>
+
+        <div class="header__item__logo">
+          <i class="fab fa-youtube"></i>
+          <div class="logo__text">
+            <div>P</div>
+            <div>remium</div>
+            <div>KR</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="header__item">
+        <input class="header__search__input" placeholder="검색" />
+        <button class="header__search__button">
+          <i class="search__button__icon fas fa-search"></i>
+        </button>
+      </div>
+      <div class="header__item"></div>
+    </header>
     <aside class="aside">
       <ul class="aside__list">
         <li class="aside__item aside__item--active">
