--- a/exercises/5_profile_generator/index.html
+++ b/exercises/5_profile_generator/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <div class="container"></div>
-    
+
     <label for="cols">cols</label>
-    <input type="number" class="input" name="cols" value="20">
+    <input type="number" class="input" name="cols" value="5" />
 
     <label for="rows">rows</label>
-    <input type="number" class="input" name="rows" value="20">
-    
+    <input type="number" class="input" name="rows" value="5" />
+
     <button onclick="draw()">Create</button>
     <script src="./script.js"></script>
   </body>
