[Exercise] youtube-clone: add header icons

--- a/exercises/3_youtube/index.html
+++ b/exercises/3_youtube/index.html
@@ -37,7 +37,15 @@
           <i class="search__button__icon fas fa-search"></i>
         </button>
       </div>
-      <div class="header__item"></div>
+
+      <div class="header__item">
+        <i class="header__icon fas fa-video"></i>
+        <i class="header__icon fas fa-th"></i>
+        <i class="header__icon fas fa-bell"></i>
+        <div class="header__profile">
+          <span>M</span>
+        </div>
+      </div>
     </header>
     <aside class="aside">
       <ul class="aside__list">
@@ -182,5 +190,7 @@
         전화: 080-822-1450 (무료)
       </div>
     </aside>
+
+    <section class="section"></section>
   </body>
 </html>
