[Exercise] mosaic: change div to canvas

--- a/exercises/7_mosaic/index.html
+++ b/exercises/7_mosaic/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MOSAIC</title>
-    <link rel="stylesheet" href="./reset.css" class="">
-    <link rel="stylesheet" href="./style.css" class="">
-</head>
-<body>
-    <img id="image" src="image.jpg">
-    <div id="container"></div>
+    <link rel="stylesheet" href="./reset.css" class="" />
+    <link rel="stylesheet" href="./style.css" class="" />
+  </head>
+  <body>
+    <img id="image" src="image.jpg" />
+    <canvas id="mosaic"></canvas>
     <script src="./main.js"></script>
-</body>
+  </body>
 </html>
