[Exercise] mosaic: add loader

--- a/exercises/7_mosaic/index.html
+++ b/exercises/7_mosaic/index.html
@@ -10,6 +10,8 @@
   <body>
     <img id="image" src="image.jpg" />
     <canvas id="mosaic"></canvas>
+    <div class="description">press ArrowUp/Down to change tile's size</div>
+    <div class="loading"></div>
     <script src="./main.js"></script>
   </body>
 </html>
